# challenge_problem

./: README.md
catkin_ws/: CMakeLists.txt  joint_plugin.cc  joint_plugin.cpp  set_joint_rot.cc  set_joint_trans.cc
installation/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
installation/catkin_ws/devel/include/ig_action_msgs/: InstructionGraphAction.h  InstructionGraphActionFeedback.h  InstructionGraphActionGoal.h  InstructionGraphActionResult.h  InstructionGraphFeedback.h  InstructionGraphGoal.h  InstructionGraphResult.h
installation/catkin_ws/devel/include/messages/: euler.h
installation/catkin_ws/devel/lib/pkgconfig/: brass_logger.pc  cp1_gazebo.pc  euler_orientation.pc  ig_action_client.pc  ig_action_msgs.pc  ig_action_server.pc  kobuki_capabilities.pc  kobuki_keyop.pc  messages.pc  turtlebot_capabilities.pc
installation/catkin_ws/devel/share/brass_logger/cmake/: brass_loggerConfig.cmake
installation/catkin_ws/devel/share/cp1_gazebo/cmake/: cp1_gazeboConfig.cmake
installation/catkin_ws/devel/share/euler_orientation/cmake/: euler_orientationConfig.cmake
installation/catkin_ws/devel/share/ig_action_client/cmake/: ig_action_clientConfig.cmake
installation/catkin_ws/src/cp1_gazebo/: catch_miscalibration.py  cp1_gazebo.kdev4  kinect_opposite_1.pose
installation/catkin_ws/src/cp1_gazebo/.kdev4/: cp1_gazebo.kdev4
installation/catkin_ws/src/cp1_gazebo/launch/: cp1-displ-test.launch  cp1-displ.launch
installation/catkin_ws/src/cp1_gazebo/robot_description/: kobuki.launch.xml
installation/catkin_ws/src/cp1_gazebo/rvis/: cp1.rviz
(+71 files in other folders)
